# sat-an

./: .gitignore  LICENSE  README.md  hello.yaml  pyproject.toml
.github/workflows/: ruff.yml
sky-pilot/: hello.yaml  skypilot-role.yaml
src/: exploration.py  sat-an.py
src/__marimo__/session/: exploration.py.json  sat-an.py.json
src/dfetching/: gcloud_utils.py  ingest.py  utils.py
src/processing/: process.py
src/training/: gradient_boots_models.py  schemas.py  tab_classifiers.py  training_loop.py
src/validators/: validators.py
src/wandb/: latest-run
src/wandb/run-20260107_011530-kdn7t2di/: run-kdn7t2di.wandb
src/wandb/run-20260107_011530-kdn7t2di/files/: config.yaml  requirements.txt  wandb-metadata.json
